Version 8.13 (Unreleased)
-------------------------

Version 8.12
------------

- Fix bug where some users would incorrectly not receive workflow notifications for projects they were subscribed to.
- restructured dSYM processing.  It now records errors in the symbolication process
  more accurately and will report system errors them to the internal logger.
- Added data migration to backfill legacy release data
- Added data migration to backfill legacy commit data
- Added data migration to backfill legacy release file and environment data
- Allow gziped/deflated JavaScript artifacts to be uploaded through the API.
- Shared issue view no longer shows SDK.
- Added ``activeSince`` to search (uses ``active_at``).
- Added ``firstSeen`` to search (uses ``first_seen``).
- Added ``lastSeen`` to search (uses ``last_seen``).
- Added ``firstRelease`` to search (uses ``first_release``).
- Fixed usage (and propagation) of ``Group.first_release``.
- The + and - datetime search helpers now work with ranges (e.g. ``<=``).
- Added the ability to download artifacts from releases.

SDKs
~~~~

- The `repos` interface has been added.

Schema Changes
~~~~~~~~~~~~~~
- Added ``Release.organization`` column.
- Added ``ReleaseProject`` model.
- Added ``ReleaseCommit.organization_id`` column.
- Added ``ReleaseFile.organization`` column.
- Added ``ReleaseEnvironment.organization_id`` column.

Version 8.11
------------

- Ignore a ``null`` ``Origin`` header for authentication.
- Added the ability to search for issues that you are subscribed to from the stream view.
- Added the ability to search issues by their last seen timestamp.
- Improved UI for password and API key fields used in integrations
- Fixed bug where API responses would include incorrect `isSubscribed` values for issues.
- Added support for switching to unsymbolicated tracebacks in cocoa.
- Invalidate user sessions when changing password and 2fa settings.
- Add configurable password validators to enforce password strength.