@@ -1,6 +1,8 @@
 Version 8.13 (Unreleased)
 -------------------------
 
+- Implemented ``--concurrency` on `sentry cleanup`
+
 Version 8.12
 ------------
 
